# diligence-agent

./: .env.example  .gitignore  AMBIGUITIES.md  README.md  docker-compose.yml  pyrightconfig.json  v0-spec.md  v1-spec.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  agent.py  api.py  baseline.py  config.py  ingest.py  llm.py  retrieval.py  schemas.py  tool_protocol.py  tools.py  trace.py
backend/app/review/: __init__.py  annotate_docx.py  annotate_md.py  annotate_pdf.py  extract.py  parse.py  registry.py  report.py  report_html.py  run_review.py  verify.py
backend/tests/: test_citation_matching.py  test_concurrency.py  test_eval_helpers.py  test_hybrid_retrieval_and_stall.py  test_iteration_analytics.py  test_review_annotate_office.py  test_review_api.py  test_review_extract.py  test_review_parse.py  test_review_registry.py  test_review_report.py  test_review_schemas.py  test_review_scorer.py  test_review_verify.py  test_tools.py
data/: classified.jsonl  dataset_profile.json  disputes.jsonl  gold_annotations.json  parse_report.json  smoke_llm_result.json  spotcheck_template.json  subset.json  subset_report.md  verified.jsonl
dataset_builder/: characterize.py  d1_pull_raw.py  d2_parse_test.py  d3_classify.py  d4_verify.py  d5_select_subset.py  d6_spotcheck_template.py  llm_json.py
evals/: iteration_analytics.py  judges.py  review_scorer.py  run.py  scorers.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
results/: agent.json  agent_judge_items.json  baseline.json  (+2 more)
(+171 files in other folders)
