[project]
name = "diligence-agent-backend"
version = "0.1.0"
description = "FinanceBench-backed diligence memo generator — backend + agent + eval harness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

# The dataset_builder/ and evals/ packages import from backend.app, so we run
# everything from the repo root with this project's venv:
#   uv sync --project backend
#   uv run --project backend evals/run.py --system baseline
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
